--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
     <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
   </p>
 </div>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sunt suscipit modi, molestiae quo impedit ipsam aut dolorem harum officiis esse vero, delectus nihil, quod temporibus sequi. Reiciendis, rerum qui?
